branches/x86-64/kpro64/libkapi/y.output
   0  $accept : file $end

   1  file :
   2       | stmtlist

   3  stmtlist : stmt
   4           | stmtlist stmt

   5  stmt : stmt0 tokSEMICOLON
   6       | stmt0 stmt0

   7  stmt0 : typestmt
   8        | expectstmt
   9        | appendstmt
  10        | implicitstmt
  11        | assignstmt
  12        | arithmeticassignstmt
  13        | vardeclstmt
  14        | attrstmt
  15        | error

  16  attrstmt : tokIDENT tokPLUSEQUALS tokSTRINGCONST
  17           | tokIDENT tokSTRINGCONST

  18  typestmt : tokTYPE tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN nlimittypelist

  19  expectstmt : tokEXPECT typeexpect idlist

  20  appendstmt : tokAPPEND tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN

  21  implicitstmt : tokIMPLICIT tokNONE

  22  typeexpect : tokTYPE
  23             | tokVARIABLE
  24             | tokENUM
  25             | tokATTRIBUTE

  26  assignstmt : tokIDENT lhsindexexp tokCOLONEQUALS rhs nlimitassignlist

  27  arithmeticassignstmt : tokIDENT lhsindexexp tokCOLONEQUALS arithmeticrhs

  28  lhsindexexp : tokLSBRACK lhsindex tokRSBRACK
  29              |

  30  lhsindex : tokIDENT
  31           | tokSTAR
  32           | tokSTRINGCONST

  33  vardeclstmt : tokIDENT typespecclause

  34  typespecclause : tokCOLON fulltypespec
  35                 |

  36  fulltypespec : simpletypespec
  37               | tokARRAY tokLSBRACK tokIDENT tokRSBRACK tokOF simpletypespec
  38               | tokARRAY tokLSBRACK tokSTRING tokRSBRACK tokOF simpletypespec

  39  simpletypespec : tokSTRING
  40                 | tokINT
  41                 | tokREAL
  42                 | tokIDENT
  43                 | tokBITMASK tokLPAREN tokIDENT tokRPAREN

  44  nstringlist :
  45              | stringlist

  46  stringlist : revstringlist

  47  revstringlist : tokSTRINGCONST
  48                | revstringlist tokCOMMA tokSTRINGCONST

  49  reallist : revreallist

  50  revreallist : tokREALCONST
  51              | revreallist tokCOMMA tokREALCONST

  52  nidlist : revidlist
  53          |

  54  idlist : revidlist

  55  revidlist : tokIDENT
  56            | revidlist tokCOMMA tokIDENT

  57  intlist : revintlist

  58  revintlist : tokINTCONST
  59             | revintlist tokCOMMA tokINTCONST

  60  rhs : tokSTRINGCONST
  61      | tokINTCONST
  62      | tokREALCONST
  63      | bitmaskexpr
  64      | tokIDENT lhsindexexp

  65  arithmeticrhs : arithmeticrhsrest arithmeticop intrhs

  66  arithmeticrhsrest : intrhs
  67                    | arithmeticrhsrest arithmeticop intrhs

  68  intrhs : tokINTCONST
  69         | tokIDENT lhsindexexp

  70  arithmeticop : tokPLUS
  71               | tokDIV

  72  bitmaskexpr : tokBITMASK tokLPAREN nidlist tokRPAREN

  73  nlimitassignlist : limitassignlist
  74                   |

  75  nlimittypelist : limittypelist
  76                 |

  77  limitassignlist : limitassign
  78                  | limitassignlist limitassign

  79  limittypelist : limittype
  80                | limittypelist limittype

  81  limitassign : tokLIMIT tokLABRACK nstringlist tokRABRACK limitassignval

  82  limittype : tokLIMIT tokLABRACK nstringlist tokRABRACK tokNOREDEFINE

  83  limitassignval : tokNOREDEFINE
  84                 | tokLPAREN valuelist tokRPAREN
  85                 | tokLPAREN valuerange tokRPAREN

  86  valuelist : idlist
  87            | intlist
  88            | reallist
  89            | stringlist

  90  valuerange : tokIDENT tokDDOT tokIDENT
  91             | tokINTCONST tokDDOT tokINTCONST

state 0
	$accept : . file $end  (0)
	file : .  (1)

	error  shift 1
	tokEXPECT  shift 2
	tokTYPE  shift 3
	tokIMPLICIT  shift 4
	tokIDENT  shift 5
	tokAPPEND  shift 6
	$end  reduce 1

	file  goto 7
	stmtlist  goto 8
	stmt  goto 9
	stmt0  goto 10
	typestmt  goto 11
	expectstmt  goto 12
	appendstmt  goto 13
	implicitstmt  goto 14
	assignstmt  goto 15
	arithmeticassignstmt  goto 16
	vardeclstmt  goto 17
	attrstmt  goto 18


state 1
	stmt0 : error .  (15)

	.  reduce 15


state 2
	expectstmt : tokEXPECT . typeexpect idlist  (19)

	tokENUM  shift 19
	tokTYPE  shift 20
	tokVARIABLE  shift 21
	tokATTRIBUTE  shift 22
	.  error

	typeexpect  goto 23


state 3
	typestmt : tokTYPE . tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN nlimittypelist  (18)

	tokIDENT  shift 24
	.  error


state 4
	implicitstmt : tokIMPLICIT . tokNONE  (21)

	tokNONE  shift 25
	.  error


state 5
	attrstmt : tokIDENT . tokPLUSEQUALS tokSTRINGCONST  (16)
	attrstmt : tokIDENT . tokSTRINGCONST  (17)
	assignstmt : tokIDENT . lhsindexexp tokCOLONEQUALS rhs nlimitassignlist  (26)
	arithmeticassignstmt : tokIDENT . lhsindexexp tokCOLONEQUALS arithmeticrhs  (27)
	vardeclstmt : tokIDENT . typespecclause  (33)
	lhsindexexp : .  (29)
	typespecclause : .  (35)

	tokLSBRACK  shift 26
	tokSTRINGCONST  shift 27
	tokCOLON  shift 28
	tokPLUSEQUALS  shift 29
	$end  reduce 35
	error  reduce 35
	tokEXPECT  reduce 35
	tokTYPE  reduce 35
	tokIMPLICIT  reduce 35
	tokSEMICOLON  reduce 35
	tokCOLONEQUALS  reduce 29
	tokIDENT  reduce 35
	tokAPPEND  reduce 35

	lhsindexexp  goto 30
	typespecclause  goto 31


state 6
	appendstmt : tokAPPEND . tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN  (20)

	tokIDENT  shift 32
	.  error


state 7
	$accept : file . $end  (0)

	$end  accept


state 8
	file : stmtlist .  (2)
	stmtlist : stmtlist . stmt  (4)

	error  shift 1
	tokEXPECT  shift 2
	tokTYPE  shift 3
	tokIMPLICIT  shift 4
	tokIDENT  shift 5
	tokAPPEND  shift 6
	$end  reduce 2

	stmt  goto 33
	stmt0  goto 10
	typestmt  goto 11
	expectstmt  goto 12
	appendstmt  goto 13
	implicitstmt  goto 14
	assignstmt  goto 15
	arithmeticassignstmt  goto 16
	vardeclstmt  goto 17
	attrstmt  goto 18


state 9
	stmtlist : stmt .  (3)

	.  reduce 3


state 10
	stmt : stmt0 . tokSEMICOLON  (5)
	stmt : stmt0 . stmt0  (6)

	error  shift 1
	tokEXPECT  shift 2
	tokTYPE  shift 3
	tokIMPLICIT  shift 4
	tokSEMICOLON  shift 34
	tokIDENT  shift 5
	tokAPPEND  shift 6
	.  error

	stmt0  goto 35
	typestmt  goto 11
	expectstmt  goto 12
	appendstmt  goto 13
	implicitstmt  goto 14
	assignstmt  goto 15
	arithmeticassignstmt  goto 16
	vardeclstmt  goto 17
	attrstmt  goto 18


state 11
	stmt0 : typestmt .  (7)

	.  reduce 7


state 12
	stmt0 : expectstmt .  (8)

	.  reduce 8


state 13
	stmt0 : appendstmt .  (9)

	.  reduce 9


state 14
	stmt0 : implicitstmt .  (10)

	.  reduce 10


state 15
	stmt0 : assignstmt .  (11)

	.  reduce 11


state 16
	stmt0 : arithmeticassignstmt .  (12)

	.  reduce 12


state 17
	stmt0 : vardeclstmt .  (13)

	.  reduce 13


state 18
	stmt0 : attrstmt .  (14)

	.  reduce 14


state 19
	typeexpect : tokENUM .  (24)

	.  reduce 24


state 20
	typeexpect : tokTYPE .  (22)

	.  reduce 22


state 21
	typeexpect : tokVARIABLE .  (23)

	.  reduce 23


state 22
	typeexpect : tokATTRIBUTE .  (25)

	.  reduce 25


state 23
	expectstmt : tokEXPECT typeexpect . idlist  (19)

	tokIDENT  shift 36
	.  error

	idlist  goto 37
	revidlist  goto 38


state 24
	typestmt : tokTYPE tokIDENT . tokEQUALS tokENUM tokLPAREN idlist tokRPAREN nlimittypelist  (18)

	tokEQUALS  shift 39
	.  error


state 25
	implicitstmt : tokIMPLICIT tokNONE .  (21)

	.  reduce 21


state 26
	lhsindexexp : tokLSBRACK . lhsindex tokRSBRACK  (28)

	tokSTRINGCONST  shift 40
	tokSTAR  shift 41
	tokIDENT  shift 42
	.  error

	lhsindex  goto 43


state 27
	attrstmt : tokIDENT tokSTRINGCONST .  (17)

	.  reduce 17


state 28
	typespecclause : tokCOLON . fulltypespec  (34)

	tokARRAY  shift 44
	tokBITMASK  shift 45
	tokINT  shift 46
	tokREAL  shift 47
	tokSTRING  shift 48
	tokIDENT  shift 49
	.  error

	fulltypespec  goto 50
	simpletypespec  goto 51


state 29
	attrstmt : tokIDENT tokPLUSEQUALS . tokSTRINGCONST  (16)

	tokSTRINGCONST  shift 52
	.  error


state 30
	assignstmt : tokIDENT lhsindexexp . tokCOLONEQUALS rhs nlimitassignlist  (26)
	arithmeticassignstmt : tokIDENT lhsindexexp . tokCOLONEQUALS arithmeticrhs  (27)

	tokCOLONEQUALS  shift 53
	.  error


state 31
	vardeclstmt : tokIDENT typespecclause .  (33)

	.  reduce 33


state 32
	appendstmt : tokAPPEND tokIDENT . tokEQUALS tokENUM tokLPAREN idlist tokRPAREN  (20)

	tokEQUALS  shift 54
	.  error


state 33
	stmtlist : stmtlist stmt .  (4)

	.  reduce 4


state 34
	stmt : stmt0 tokSEMICOLON .  (5)

	.  reduce 5


state 35
	stmt : stmt0 stmt0 .  (6)

	.  reduce 6


state 36
	revidlist : tokIDENT .  (55)

	.  reduce 55


state 37
	expectstmt : tokEXPECT typeexpect idlist .  (19)

	.  reduce 19


state 38
	idlist : revidlist .  (54)
	revidlist : revidlist . tokCOMMA tokIDENT  (56)

	tokCOMMA  shift 55
	$end  reduce 54
	error  reduce 54
	tokEXPECT  reduce 54
	tokTYPE  reduce 54
	tokIMPLICIT  reduce 54
	tokRPAREN  reduce 54
	tokSEMICOLON  reduce 54
	tokIDENT  reduce 54
	tokAPPEND  reduce 54


state 39
	typestmt : tokTYPE tokIDENT tokEQUALS . tokENUM tokLPAREN idlist tokRPAREN nlimittypelist  (18)

	tokENUM  shift 56
	.  error


state 40
	lhsindex : tokSTRINGCONST .  (32)

	.  reduce 32


state 41
	lhsindex : tokSTAR .  (31)

	.  reduce 31


state 42
	lhsindex : tokIDENT .  (30)

	.  reduce 30


state 43
	lhsindexexp : tokLSBRACK lhsindex . tokRSBRACK  (28)

	tokRSBRACK  shift 57
	.  error


state 44
	fulltypespec : tokARRAY . tokLSBRACK tokIDENT tokRSBRACK tokOF simpletypespec  (37)
	fulltypespec : tokARRAY . tokLSBRACK tokSTRING tokRSBRACK tokOF simpletypespec  (38)

	tokLSBRACK  shift 58
	.  error


state 45
	simpletypespec : tokBITMASK . tokLPAREN tokIDENT tokRPAREN  (43)

	tokLPAREN  shift 59
	.  error


state 46
	simpletypespec : tokINT .  (40)

	.  reduce 40


state 47
	simpletypespec : tokREAL .  (41)

	.  reduce 41


state 48
	simpletypespec : tokSTRING .  (39)

	.  reduce 39


state 49
	simpletypespec : tokIDENT .  (42)

	.  reduce 42


state 50
	typespecclause : tokCOLON fulltypespec .  (34)

	.  reduce 34


state 51
	fulltypespec : simpletypespec .  (36)

	.  reduce 36


state 52
	attrstmt : tokIDENT tokPLUSEQUALS tokSTRINGCONST .  (16)

	.  reduce 16


state 53
	assignstmt : tokIDENT lhsindexexp tokCOLONEQUALS . rhs nlimitassignlist  (26)
	arithmeticassignstmt : tokIDENT lhsindexexp tokCOLONEQUALS . arithmeticrhs  (27)

	tokBITMASK  shift 60
	tokREALCONST  shift 61
	tokINTCONST  shift 62
	tokSTRINGCONST  shift 63
	tokIDENT  shift 64
	.  error

	bitmaskexpr  goto 65
	rhs  goto 66
	arithmeticrhs  goto 67
	intrhs  goto 68
	arithmeticrhsrest  goto 69


state 54
	appendstmt : tokAPPEND tokIDENT tokEQUALS . tokENUM tokLPAREN idlist tokRPAREN  (20)

	tokENUM  shift 70
	.  error


state 55
	revidlist : revidlist tokCOMMA . tokIDENT  (56)

	tokIDENT  shift 71
	.  error


state 56
	typestmt : tokTYPE tokIDENT tokEQUALS tokENUM . tokLPAREN idlist tokRPAREN nlimittypelist  (18)

	tokLPAREN  shift 72
	.  error


state 57
	lhsindexexp : tokLSBRACK lhsindex tokRSBRACK .  (28)

	.  reduce 28


state 58
	fulltypespec : tokARRAY tokLSBRACK . tokIDENT tokRSBRACK tokOF simpletypespec  (37)
	fulltypespec : tokARRAY tokLSBRACK . tokSTRING tokRSBRACK tokOF simpletypespec  (38)

	tokSTRING  shift 73
	tokIDENT  shift 74
	.  error


state 59
	simpletypespec : tokBITMASK tokLPAREN . tokIDENT tokRPAREN  (43)

	tokIDENT  shift 75
	.  error


state 60
	bitmaskexpr : tokBITMASK . tokLPAREN nidlist tokRPAREN  (72)

	tokLPAREN  shift 76
	.  error


state 61
	rhs : tokREALCONST .  (62)

	.  reduce 62


state 62
	rhs : tokINTCONST .  (61)
	intrhs : tokINTCONST .  (68)

	$end  reduce 61
	error  reduce 61
	tokEXPECT  reduce 61
	tokLIMIT  reduce 61
	tokTYPE  reduce 61
	tokIMPLICIT  reduce 61
	tokSEMICOLON  reduce 61
	tokIDENT  reduce 61
	tokPLUS  reduce 68
	tokDIV  reduce 68
	tokAPPEND  reduce 61


state 63
	rhs : tokSTRINGCONST .  (60)

	.  reduce 60


state 64
	rhs : tokIDENT . lhsindexexp  (64)
	intrhs : tokIDENT . lhsindexexp  (69)
	lhsindexexp : .  (29)

	tokLSBRACK  shift 26
	$end  reduce 29
	error  reduce 29
	tokEXPECT  reduce 29
	tokLIMIT  reduce 29
	tokTYPE  reduce 29
	tokIMPLICIT  reduce 29
	tokSEMICOLON  reduce 29
	tokIDENT  reduce 29
	tokPLUS  reduce 29
	tokDIV  reduce 29
	tokAPPEND  reduce 29

	lhsindexexp  goto 77


state 65
	rhs : bitmaskexpr .  (63)

	.  reduce 63


state 66
	assignstmt : tokIDENT lhsindexexp tokCOLONEQUALS rhs . nlimitassignlist  (26)
	nlimitassignlist : .  (74)

	tokLIMIT  shift 78
	$end  reduce 74
	error  reduce 74
	tokEXPECT  reduce 74
	tokTYPE  reduce 74
	tokIMPLICIT  reduce 74
	tokSEMICOLON  reduce 74
	tokIDENT  reduce 74
	tokAPPEND  reduce 74

	limitassign  goto 79
	limitassignlist  goto 80
	nlimitassignlist  goto 81


state 67
	arithmeticassignstmt : tokIDENT lhsindexexp tokCOLONEQUALS arithmeticrhs .  (27)

	.  reduce 27


state 68
	arithmeticrhsrest : intrhs .  (66)

	.  reduce 66


state 69
	arithmeticrhs : arithmeticrhsrest . arithmeticop intrhs  (65)
	arithmeticrhsrest : arithmeticrhsrest . arithmeticop intrhs  (67)

	tokPLUS  shift 82
	tokDIV  shift 83
	.  error

	arithmeticop  goto 84


state 70
	appendstmt : tokAPPEND tokIDENT tokEQUALS tokENUM . tokLPAREN idlist tokRPAREN  (20)

	tokLPAREN  shift 85
	.  error


state 71
	revidlist : revidlist tokCOMMA tokIDENT .  (56)

	.  reduce 56


state 72
	typestmt : tokTYPE tokIDENT tokEQUALS tokENUM tokLPAREN . idlist tokRPAREN nlimittypelist  (18)

	tokIDENT  shift 36
	.  error

	idlist  goto 86
	revidlist  goto 38


state 73
	fulltypespec : tokARRAY tokLSBRACK tokSTRING . tokRSBRACK tokOF simpletypespec  (38)

	tokRSBRACK  shift 87
	.  error


state 74
	fulltypespec : tokARRAY tokLSBRACK tokIDENT . tokRSBRACK tokOF simpletypespec  (37)

	tokRSBRACK  shift 88
	.  error


state 75
	simpletypespec : tokBITMASK tokLPAREN tokIDENT . tokRPAREN  (43)

	tokRPAREN  shift 89
	.  error


state 76
	bitmaskexpr : tokBITMASK tokLPAREN . nidlist tokRPAREN  (72)
	nidlist : .  (53)

	tokIDENT  shift 36
	tokRPAREN  reduce 53

	nidlist  goto 90
	revidlist  goto 91


state 77
	rhs : tokIDENT lhsindexexp .  (64)
	intrhs : tokIDENT lhsindexexp .  (69)

	$end  reduce 64
	error  reduce 64
	tokEXPECT  reduce 64
	tokLIMIT  reduce 64
	tokTYPE  reduce 64
	tokIMPLICIT  reduce 64
	tokSEMICOLON  reduce 64
	tokIDENT  reduce 64
	tokPLUS  reduce 69
	tokDIV  reduce 69
	tokAPPEND  reduce 64


state 78
	limitassign : tokLIMIT . tokLABRACK nstringlist tokRABRACK limitassignval  (81)

	tokLABRACK  shift 92
	.  error


state 79
	limitassignlist : limitassign .  (77)

	.  reduce 77


state 80
	nlimitassignlist : limitassignlist .  (73)
	limitassignlist : limitassignlist . limitassign  (78)

	tokLIMIT  shift 78
	$end  reduce 73
	error  reduce 73
	tokEXPECT  reduce 73
	tokTYPE  reduce 73
	tokIMPLICIT  reduce 73
	tokSEMICOLON  reduce 73
	tokIDENT  reduce 73
	tokAPPEND  reduce 73

	limitassign  goto 93


state 81
	assignstmt : tokIDENT lhsindexexp tokCOLONEQUALS rhs nlimitassignlist .  (26)

	.  reduce 26


state 82
	arithmeticop : tokPLUS .  (70)

	.  reduce 70


state 83
	arithmeticop : tokDIV .  (71)

	.  reduce 71


state 84
	arithmeticrhs : arithmeticrhsrest arithmeticop . intrhs  (65)
	arithmeticrhsrest : arithmeticrhsrest arithmeticop . intrhs  (67)

	tokINTCONST  shift 94
	tokIDENT  shift 95
	.  error

	intrhs  goto 96


state 85
	appendstmt : tokAPPEND tokIDENT tokEQUALS tokENUM tokLPAREN . idlist tokRPAREN  (20)

	tokIDENT  shift 36
	.  error

	idlist  goto 97
	revidlist  goto 38


state 86
	typestmt : tokTYPE tokIDENT tokEQUALS tokENUM tokLPAREN idlist . tokRPAREN nlimittypelist  (18)

	tokRPAREN  shift 98
	.  error


state 87
	fulltypespec : tokARRAY tokLSBRACK tokSTRING tokRSBRACK . tokOF simpletypespec  (38)

	tokOF  shift 99
	.  error


state 88
	fulltypespec : tokARRAY tokLSBRACK tokIDENT tokRSBRACK . tokOF simpletypespec  (37)

	tokOF  shift 100
	.  error


state 89
	simpletypespec : tokBITMASK tokLPAREN tokIDENT tokRPAREN .  (43)

	.  reduce 43


state 90
	bitmaskexpr : tokBITMASK tokLPAREN nidlist . tokRPAREN  (72)

	tokRPAREN  shift 101
	.  error


state 91
	nidlist : revidlist .  (52)
	revidlist : revidlist . tokCOMMA tokIDENT  (56)

	tokCOMMA  shift 55
	tokRPAREN  reduce 52


state 92
	limitassign : tokLIMIT tokLABRACK . nstringlist tokRABRACK limitassignval  (81)
	nstringlist : .  (44)

	tokSTRINGCONST  shift 102
	tokRABRACK  reduce 44

	stringlist  goto 103
	nstringlist  goto 104
	revstringlist  goto 105


state 93
	limitassignlist : limitassignlist limitassign .  (78)

	.  reduce 78


state 94
	intrhs : tokINTCONST .  (68)

	.  reduce 68


state 95
	intrhs : tokIDENT . lhsindexexp  (69)
	lhsindexexp : .  (29)

	tokLSBRACK  shift 26
	$end  reduce 29
	error  reduce 29
	tokEXPECT  reduce 29
	tokTYPE  reduce 29
	tokIMPLICIT  reduce 29
	tokSEMICOLON  reduce 29
	tokIDENT  reduce 29
	tokPLUS  reduce 29
	tokDIV  reduce 29
	tokAPPEND  reduce 29

	lhsindexexp  goto 106


state 96
	arithmeticrhs : arithmeticrhsrest arithmeticop intrhs .  (65)
	arithmeticrhsrest : arithmeticrhsrest arithmeticop intrhs .  (67)

	$end  reduce 65
	error  reduce 65
	tokEXPECT  reduce 65
	tokTYPE  reduce 65
	tokIMPLICIT  reduce 65
	tokSEMICOLON  reduce 65
	tokIDENT  reduce 65
	tokPLUS  reduce 67
	tokDIV  reduce 67
	tokAPPEND  reduce 65


state 97
	appendstmt : tokAPPEND tokIDENT tokEQUALS tokENUM tokLPAREN idlist . tokRPAREN  (20)

	tokRPAREN  shift 107
	.  error


state 98
	typestmt : tokTYPE tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN . nlimittypelist  (18)
	nlimittypelist : .  (76)

	tokLIMIT  shift 108
	$end  reduce 76
	error  reduce 76
	tokEXPECT  reduce 76
	tokTYPE  reduce 76
	tokIMPLICIT  reduce 76
	tokSEMICOLON  reduce 76
	tokIDENT  reduce 76
	tokAPPEND  reduce 76

	limittypelist  goto 109
	nlimittypelist  goto 110
	limittype  goto 111


state 99
	fulltypespec : tokARRAY tokLSBRACK tokSTRING tokRSBRACK tokOF . simpletypespec  (38)

	tokBITMASK  shift 45
	tokINT  shift 46
	tokREAL  shift 47
	tokSTRING  shift 48
	tokIDENT  shift 49
	.  error

	simpletypespec  goto 112


state 100
	fulltypespec : tokARRAY tokLSBRACK tokIDENT tokRSBRACK tokOF . simpletypespec  (37)

	tokBITMASK  shift 45
	tokINT  shift 46
	tokREAL  shift 47
	tokSTRING  shift 48
	tokIDENT  shift 49
	.  error

	simpletypespec  goto 113


state 101
	bitmaskexpr : tokBITMASK tokLPAREN nidlist tokRPAREN .  (72)

	.  reduce 72


state 102
	revstringlist : tokSTRINGCONST .  (47)

	.  reduce 47


state 103
	nstringlist : stringlist .  (45)

	.  reduce 45


state 104
	limitassign : tokLIMIT tokLABRACK nstringlist . tokRABRACK limitassignval  (81)

	tokRABRACK  shift 114
	.  error


state 105
	stringlist : revstringlist .  (46)
	revstringlist : revstringlist . tokCOMMA tokSTRINGCONST  (48)

	tokCOMMA  shift 115
	tokRABRACK  reduce 46
	tokRPAREN  reduce 46


state 106
	intrhs : tokIDENT lhsindexexp .  (69)

	.  reduce 69


state 107
	appendstmt : tokAPPEND tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN .  (20)

	.  reduce 20


state 108
	limittype : tokLIMIT . tokLABRACK nstringlist tokRABRACK tokNOREDEFINE  (82)

	tokLABRACK  shift 116
	.  error


state 109
	nlimittypelist : limittypelist .  (75)
	limittypelist : limittypelist . limittype  (80)

	tokLIMIT  shift 108
	$end  reduce 75
	error  reduce 75
	tokEXPECT  reduce 75
	tokTYPE  reduce 75
	tokIMPLICIT  reduce 75
	tokSEMICOLON  reduce 75
	tokIDENT  reduce 75
	tokAPPEND  reduce 75

	limittype  goto 117


state 110
	typestmt : tokTYPE tokIDENT tokEQUALS tokENUM tokLPAREN idlist tokRPAREN nlimittypelist .  (18)

	.  reduce 18


state 111
	limittypelist : limittype .  (79)

	.  reduce 79


state 112
	fulltypespec : tokARRAY tokLSBRACK tokSTRING tokRSBRACK tokOF simpletypespec .  (38)

	.  reduce 38


state 113
	fulltypespec : tokARRAY tokLSBRACK tokIDENT tokRSBRACK tokOF simpletypespec .  (37)

	.  reduce 37


state 114
	limitassign : tokLIMIT tokLABRACK nstringlist tokRABRACK . limitassignval  (81)

	tokNOREDEFINE  shift 118
	tokLPAREN  shift 119
	.  error

	limitassignval  goto 120


state 115
	revstringlist : revstringlist tokCOMMA . tokSTRINGCONST  (48)

	tokSTRINGCONST  shift 121
	.  error


state 116
	limittype : tokLIMIT tokLABRACK . nstringlist tokRABRACK tokNOREDEFINE  (82)
	nstringlist : .  (44)

	tokSTRINGCONST  shift 102
	tokRABRACK  reduce 44

	stringlist  goto 103
	nstringlist  goto 122
	revstringlist  goto 105


state 117
	limittypelist : limittypelist limittype .  (80)

	.  reduce 80


state 118
	limitassignval : tokNOREDEFINE .  (83)

	.  reduce 83


state 119
	limitassignval : tokLPAREN . valuelist tokRPAREN  (84)
	limitassignval : tokLPAREN . valuerange tokRPAREN  (85)

	tokREALCONST  shift 123
	tokINTCONST  shift 124
	tokSTRINGCONST  shift 102
	tokIDENT  shift 125
	.  error

	valuerange  goto 126
	valuelist  goto 127
	reallist  goto 128
	idlist  goto 129
	intlist  goto 130
	stringlist  goto 131
	revstringlist  goto 105
	revintlist  goto 132
	revidlist  goto 38
	revreallist  goto 133


state 120
	limitassign : tokLIMIT tokLABRACK nstringlist tokRABRACK limitassignval .  (81)

	.  reduce 81


state 121
	revstringlist : revstringlist tokCOMMA tokSTRINGCONST .  (48)

	.  reduce 48


state 122
	limittype : tokLIMIT tokLABRACK nstringlist . tokRABRACK tokNOREDEFINE  (82)

	tokRABRACK  shift 134
	.  error


state 123
	revreallist : tokREALCONST .  (50)

	.  reduce 50


state 124
	revintlist : tokINTCONST .  (58)
	valuerange : tokINTCONST . tokDDOT tokINTCONST  (91)

	tokDDOT  shift 135
	tokRPAREN  reduce 58
	tokCOMMA  reduce 58


state 125
	revidlist : tokIDENT .  (55)
	valuerange : tokIDENT . tokDDOT tokIDENT  (90)

	tokDDOT  shift 136
	tokRPAREN  reduce 55
	tokCOMMA  reduce 55


state 126
	limitassignval : tokLPAREN valuerange . tokRPAREN  (85)

	tokRPAREN  shift 137
	.  error


state 127
	limitassignval : tokLPAREN valuelist . tokRPAREN  (84)

	tokRPAREN  shift 138
	.  error


state 128
	valuelist : reallist .  (88)

	.  reduce 88


state 129
	valuelist : idlist .  (86)

	.  reduce 86


state 130
	valuelist : intlist .  (87)

	.  reduce 87


state 131
	valuelist : stringlist .  (89)

	.  reduce 89


state 132
	intlist : revintlist .  (57)
	revintlist : revintlist . tokCOMMA tokINTCONST  (59)

	tokCOMMA  shift 139
	tokRPAREN  reduce 57


state 133
	reallist : revreallist .  (49)
	revreallist : revreallist . tokCOMMA tokREALCONST  (51)

	tokCOMMA  shift 140
	tokRPAREN  reduce 49


state 134
	limittype : tokLIMIT tokLABRACK nstringlist tokRABRACK . tokNOREDEFINE  (82)

	tokNOREDEFINE  shift 141
	.  error


state 135
	valuerange : tokINTCONST tokDDOT . tokINTCONST  (91)

	tokINTCONST  shift 142
	.  error


state 136
	valuerange : tokIDENT tokDDOT . tokIDENT  (90)

	tokIDENT  shift 143
	.  error


state 137
	limitassignval : tokLPAREN valuerange tokRPAREN .  (85)

	.  reduce 85


state 138
	limitassignval : tokLPAREN valuelist tokRPAREN .  (84)

	.  reduce 84


state 139
	revintlist : revintlist tokCOMMA . tokINTCONST  (59)

	tokINTCONST  shift 144
	.  error


state 140
	revreallist : revreallist tokCOMMA . tokREALCONST  (51)

	tokREALCONST  shift 145
	.  error


state 141
	limittype : tokLIMIT tokLABRACK nstringlist tokRABRACK tokNOREDEFINE .  (82)

	.  reduce 82


state 142
	valuerange : tokINTCONST tokDDOT tokINTCONST .  (91)

	.  reduce 91


state 143
	valuerange : tokIDENT tokDDOT tokIDENT .  (90)

	.  reduce 90


state 144
	revintlist : revintlist tokCOMMA tokINTCONST .  (59)

	.  reduce 59


state 145
	revreallist : revreallist tokCOMMA tokREALCONST .  (51)

	.  reduce 51


45 terminals, 44 nonterminals
92 grammar rules, 146 states
